Tests and refactoring

--- a/src/app/components/main-pos/main-pos.component.html
+++ b/src/app/components/main-pos/main-pos.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-light bg-light">
-    <span class="navbar-brand" (click)="openParadocsSite()">
+    <span class="navbar-brand" (click)="goToParadocs()">
         <img src="assets/paradocs-logo.png" class="d-inline-block align-top" alt="">
     </span>
 </nav>
